<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >
    <string name="app_name">Migrate helper</string>
    <string name="current_version_name">5.0</string>
    <string name="changelog">Changelog</string>
    <string name="version_3_1">Version 3.1</string>
    <string name="version_3_1_content">
        \u2022 More fixes to no data restore\n
        \u2022 Detect errors in app restore\n
        \u2022 Probable fix to crashes while loading app list\n
        \u2022 Also delete system apk if installed as a user app\n
        \u2022 Use root to extract twrp uninstall zips, if file permission is denied\n
        \u2022 Add changelog and contact options\n
    </string>
    <string name="version_3_1_1">Version 3.1.1</string>
    <string name="version_3_1_1_content">
        \u2022 Fix to apps with symbols\n
    </string>
    <string name="version_4_0">Version 4.0</string>
    <string name="version_4_0_content">
        \u2022 Initial compatibility attempt with Android 11\n
        \u2022 Remove settings addon\n
        \u2022 Link to Migrate Flasher if no metadata found\n
        \u2022 For failed APKs, add option to retry app data restore after installing from Play Store.\n
        \u2022 Many under the hood changes\n
    </string>
    <string name="version_5_0">Version 4.0</string>
    <string name="version_5_0_content">
        \u2022 No major change
    </string>
    <string name="restore_main">Restore apps and data</string>
    <string name="uninstallFromSystem">Uninstall from system</string>
    <string name="uninstall_or_finalize">Uninstall app\nor Finalize restore</string>
    <string name="emergency_restore">Emergency restore!!</string>
    <string name="temporary_disable">Temporary disable</string>
    <string name="selective_restore">Choose what to restore</string>
    <string name="please_use_magisk">Make sure to use Magisk</string>
    <string name="lastLog">Last logs</string>
    <string name="preferences">Preferences</string>
    <string name="contact_on_telegram">Contact on Telegram</string>
    <string name="uninstall_by_twrp">Uninstall by twrp.</string>
    <string name="storage_perm_needed">Storage permission needed</string>
    <string name="grant">Grant</string>
    <string name="contact_desc">Our Telegram group has many members, you will get quicker help on the group. In case your issue is not resolved, kindly contact developer.</string>
    <string name="contact_developer">Contact developer</string>
    <string name="contact_group">Message on group</string>
    <string name="emergency_restore_desc">Emergency restore attempts to recover as much app data as possible without reading metadata files.\n\n
        1. Only <b>APP</b> restores are supported for now.\n
        2. All apps will be attempted to be restored. Selection not possible.\n
        3. Force close app to abort restore.\n
    </string>
    <string name="seeProgressLog">See Progress log</string>
    <string name="seeErrorLog">See Error log</string>
    <string name="report_logs">Report logs</string>
    <string name="progressLog">Progress log</string>
    <string name="errorLog">Error log</string>
    <string name="no_header">No header</string>
    <string name="no_filepath">No filepath</string>
    <string name="log_reading_error">Log reading error</string>
    <string name="too_fast">Whoa, too fast!!</string>
    <string name="too_fast_desc">The app has not been explicitly tested on Android version above 12.\n\nPlease submit your feedback on whether the app works or not.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="apps_will_be_closed">Apps will be closed</string>
    <string name="do_not_use_desc">Apps will be closed while restoring. Please do not use the device to avoid random crashes.
        \n\nYou will get an option to minimize the app restore window, but it is not recommended.</string>
    <string name="later">Nevermind, I will restore later.</string>
    <string name="sure">Are you sure?</string>
    <string name="howToRestore">Uninstalling requires root. You will also need to re-flash migrate zips to restore data later on.</string>
    <string name="goAhead">Go ahead</string>
    <string name="unsupported_device">Unsupported device.</string>
    <string name="cpu_arch_is">Your CPU arch is:</string>
    <string name="currently_supported_cpu">Only <b>armeabi-v7a, arm64-v8a, x86, x86_64</b> CPU architectures are currently supported. Please contact via mail to help support your device.</string>
    <string name="select_mail">Select mailing app, example Gmail.</string>
    <string name="select_telegram">Open Telegram and select the Migrate group</string>
    <string name="contact">Contact via Telegram</string>
    <string name="default_sms_app_must_be_changed">Default SMS app must be changed before uninstalling this helper app.</string>
    <string name="emergency_restore_running">Emergency restore is running. Please Force Stop this app if necessary.</string>
    <string name="restore_already_running">Restore is already running. Please Force Stop this app if necessary.</string>
    <string name="please_wait">Please wait</string>
    <string name="waiting_for_contacts">Waiting for contacts restore</string>
    <string name="waiting_for_contacts_desc">Migrate helper has detected that you have chosen to restore contact handling apps which may conflict with currently running contact restore operation.\n\n
    App restore will continue after contacts are restored.
    </string>
    <string name="abort_title">This is highly not recommended!</string>
    <string name="abort_desc">This may leave all apps unusable and a factory reset may be necessary</string>
    <string name="let_it_continue">Let it continue</string>
    <string name="abort_anyway">Abort anyway</string>
    <string name="erp_title">Preparing to restore</string>
    <string name="will_be_restored_later">To be restored after applications</string>
    <string name="ready_to_be_restored">Ready to restore</string>
    <string name="restore_starting_in">Restore starting in…</string>
    <string name="number_of_selected_apps">Selected apps</string>
    <string name="no_addon">No add-on</string>
    <string name="denied">Denied</string>
    <string name="ok_disable">OK, disable</string>
    <string name="dont_disable">No, don\'t disable</string>
    <string name="start">Start</string>
    <string name="close">CLOSE</string>
    <string name="abort">Abort!</string>
    <string name="minimize">Minimize</string>
    <string name="report">Report</string>
    <string name="retry">Retry</string>
    <string name="minimizing_may_decrease_speed">Minimizing this screen may decrease restore speed!</string>
    <string name="finished">Finished! No errors.</string>
    <string name="finished_with_errors">Finished with errors!</string>
    <string name="uninstall_prompt">Click FINISH to uninstall this app</string>
    <string name="some_post_jobs_left">Click to open post restore jobs.</string>
    <string name="change_dpi_and_reboot_prompt">Click FINISH to change DPI and reboot</string>
    <string name="making_script">Making script</string>
    <string name="finish">Finish</string>
    <string name="finalize">Finalize</string>
    <string name="restoreCancelled">Restore cancelled.</string>
    <string name="select_apps">Select what to restore</string>
    <string name="restore">Restore</string>
    <string name="app">App</string>
    <string name="data">Data</string>
    <string name="perm">Perm</string>
    <string name="extras">Extras</string>
    <string name="apps">Applications</string>
    <string name="requesting_root">Requesting root</string>
    <string name="failed">Failed</string>
    <string name="failed_desc">Please grant root permission.</string>
    <string name="everything">Everything selected!</string>
    <string name="reading_metadata">Reading metadata…</string>
    <string name="initMessageShort">This can take up to 3 minutes.\n\nIn case you have waited more than 5 minutes\nClick CANCEL\nOpen Magisk app\nClose the Magisk app\nOpen this app and retry restoring</string>
    <string name="migrateFlasher">Migrate Flasher</string>
    <string name="are_you_rooted">Are you rooted?</string>
    <string name="are_you_rooted_desc">Make sure to grant root. Root with Magisk if needed.</string>
    <string name="packageName">Package :</string>
    <string name="versionName">Version name :</string>
    <string name="installer">Installer: </string>
    <string name="data_size">Data size :</string>
    <string name="next">Next</string>
    <string name="reset_sms_app">Reset default SMS app</string>
    <string name="reboot_for_sms">You may need to reboot your phone for the restored messages to appear. <b>You may also need to clear data of the sms app.</b></string>
    <string name="uninstall_helper_app">Uninstall/disable</string>
    <string name="change_dpi">Change DPI value</string>
    <string name="wifi_was_restored">Wifi was restored. Reboot is needed.</string>
    <string name="uninstall_app">Uninstall this app</string>
    <string name="disable_app">Disable this app</string>
    <string name="do_nothing">Just close</string>
    <string name="change_to">Change to: </string>
    <string name="ignore_read_errors">Ignore read errors</string>
    <string name="ignore_read_errors_desc">This will ignore all errors during reading of metadata files</string>
    <string name="ignore_extras">Ignore extras</string>
    <string name="ignore_extras_desc">This will completely ignore reading and restoring extras like contacts, sms, calls, DPI etc</string>
    <string name="restore_start_animation">Show restore start countdown</string>
    <string name="restore_start_animation_desc">Show/hide the countdown animation before restore starts.</string>
    <string name="loadIconsInList">Load icons in app list</string>
    <string name="loadIconsInListDesc">Disable this in case of memory overflow crashes</string>
    <string name="advanced">Advanced</string>
    <string name="remount_data">Remount data</string>
    <string name="remount_data_desc">This tries to find and remount /data partition as read-write. Usually this is not needed.</string>
    <string name="install">Install</string>
    <string name="load_extras_on_ui_thread">Load extras on ui thread</string>
    <string name="load_extras_on_ui_thread_desc">Probable fix to some errors in restore selector screen.</string>
    <string name="track_restore_finished">Track restore finished</string>
    <string name="track_restore_finished_desc">Track when restore is finished to avoid resuming progress show activity. Do not disable unless you are sure.</string>
    <string name="remount_all_to_uninstall">Remount all to uninstall</string>
    <string name="remount_all_to_uninstall_desc">If uninstalling fails, remount all mount points and auto retry.</string>
    <string name="manual_cache">Specify path to migrate_cache</string>
    <string name="manual_metadata_holder">Specify path to metadata holder</string>
    <string name="uninstall_desc">If doesn\'t work, delete the above directory.</string>
    <string name="temporary_disable_desc">App will stop giving notifications, but remain installed.</string>
    <string name="delete_migrate_cache">Delete migrate_cache (recommended)</string>
    <string name="reboot">Reboot (recommended)</string>
    <string name="confirm_install_addon">Following add-ons need to be installed</string>
    <string name="sms_calls_addon">SMS, calls add-on</string>
    <string name="sms_calls_addon_desc">Restores SMS and calls.</string>
    <string name="twrp_zip_files_under">TWRP zip files will be unpacked under:\n<b>[Internal storage]/Migrate/</b>\nPlease reboot to TWRP and flash.</string>
    <string name="zip_only_helper">Uninstall only helper</string>
    <string name="zip_helper_cache">Uninstall helper + migrate_cache</string>
</resources>