<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".preferences.MainPreferencesActivity"
    >

    <CheckBoxPreference
        android:key="ignoreReadErrors"
        android:title="@string/ignore_read_errors"
        android:summary="@string/ignore_read_errors_desc"
        />

    <CheckBoxPreference
        android:key="ignoreExtras"
        android:title="@string/ignore_extras"
        android:summary="@string/ignore_extras_desc"/>

    <CheckBoxPreference
        android:key="restoreStartAnimation"
        android:title="@string/restore_start_animation"
        android:summary="@string/restore_start_animation_desc"/>

    <CheckBoxPreference
        android:key="loadAppIconsInList"
        android:title="@string/loadIconsInList"
        android:summary="@string/loadIconsInListDesc"/>

    <PreferenceCategory
        android:title="@string/advanced">

        <CheckBoxPreference
            android:key="remountData"
            android:title="@string/remount_data"
            android:summary="@string/remount_data_desc"/>

        <CheckBoxPreference
            android:key="loadExtrasOnUiThread"
            android:title="@string/load_extras_on_ui_thread"
            android:summary="@string/load_extras_on_ui_thread_desc"/>

        <CheckBoxPreference
            android:key="trackRestoreFinished"
            android:title="@string/track_restore_finished"
            android:summary="@string/track_restore_finished_desc"/>

        <CheckBoxPreference
            android:key="remountRetryUninstall"
            android:title="@string/remount_all_to_uninstall"
            android:summary="@string/remount_all_to_uninstall_desc"/>

        <EditTextPreference
            android:key="manualCachePref"
            android:title="@string/manual_cache"/>

        <EditTextPreference
            android:key="manualMetadataHolderPref"
            android:title="@string/manual_metadata_holder"/>

    </PreferenceCategory>

</PreferenceScreen>