<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/xlarge_padding_width"
    android:background="@color/darkGray"
    android:id="@+id/master_addon_installer_layout"
    >


    <TextView
        android:id="@+id/settings_addon_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_install_addon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_padding_width" />

    <LinearLayout
        android:id="@+id/addon_layout_smsCalls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/large_padding_width"
        android:paddingBottom="@dimen/large_padding_width"
        android:visibility="gone"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_calls_addon"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms_calls_addon_desc" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/addon_smsCalls_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_item_done"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/addon_smsCalls_not_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_item_cancel"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/addon_smsCalls_progressBar"
                android:layout_width="@dimen/extra_small_icon_wh"
                android:layout_height="@dimen/extra_small_icon_wh"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_padding_width" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/addon_abort_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey_bg"
            android:text="@string/abort"
            android:textColor="@color/error_color" />

        <Button
            android:id="@+id/addon_install_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/install" />

    </LinearLayout>

</LinearLayout>